crates/nash-can/src/snapshots/nash_can__module__tests__little_type_open_export.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (type option(..))\n\ntype option 'a = Some 'a | None\n"
---
Interface {
    declared: DeclaredStore {
        refinements: 0,
        ..
    },
    impls: [],
    traits: [],
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [],
    aliases: [],
    unions: [
        InterfaceUnion {
            kind: Arrow(
                Type,
                Type,
            ),
            context: [],
            name: "option",
            parameters: [
                "a",
            ],
            ctors: [
                Ctor {
                    labels: None,
                    name: "Some",
                    index: 0,
                    arity: 1,
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 23,
                                },
                                end: Position {
                                    line: 3,
                                    column: 25,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Ctor {
                    labels: None,
                    name: "None",
                    index: 1,
                    arity: 0,
                    arguments: [],
                },
            ],
            alternatives: 2,
            options: Normal,
            visibility: Open,
            data_layout: None,
        },
    ],
    binops: [],
}
