crates/nash-can/src/snapshots/nash_can__module__tests__macro_call_unsupported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nvalue = json!(1)\n"
info: diagnostic
---
nash::names::unsupported

  × Unsupported feature: macro call.
   ╭─[src/Main.nash:3:9]
 2 │ 
 3 │ value = json!(1)
   ·         ────────
   ╰────
  help: This syntax is recognized, but its compiler implementation is not available yet.
