crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_keeps_package_context.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Json.Decode exposing (..)\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: Some(
            PackageName {
                author: "nash",
                project: "compiler",
            },
        ),
        name: "Json.Decode",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 29,
            },
            end: Position {
                line: 1,
                column: 33,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [],
    aliases: [],
    binops: [],
}
