crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_ambiguous_explicit_and_open_imported_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\nimport Maybe exposing (Maybe)\n\nimport Option exposing (..)\n\ntype alias Wrapped 'a = Maybe 'a\n"
info: diagnostic
---
nash::names::ambiguous_type

  × Ambiguous type `Maybe`.
   ╭─[src/Main.nash:7:25]
 6 │ 
 7 │ type alias Wrapped 'a = Maybe 'a
   ·                         ─────
   ╰────
  help:     Maybe.Maybe
            Option.Maybe

        Use a qualified name.
