crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_ambiguous_imported_types_with_multiple_modules.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\nimport Maybe exposing (..)\n\nimport Option exposing (..)\n\nimport Choice exposing (..)\n\ntype alias Wrapped 'a = Maybe 'a\n"
---
[
    AmbiguousType {
        region: Region {
            start: Position {
                line: 9,
                column: 25,
            },
            end: Position {
                line: 9,
                column: 30,
            },
        },
        prefix: None,
        name: "Maybe",
        first_module: ModuleName {
            package: None,
            name: "Maybe",
        },
        other_modules: [
            ModuleName {
                package: None,
                name: "Option",
            },
            ModuleName {
                package: None,
                name: "Choice",
            },
        ],
    },
]
