crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_ambiguous_qualified_imported_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\nimport Json.Decode as Decode\n\nimport Html.Decode as Decode\n\ntype alias Wrapped 'msg = Decode.Decoder 'msg\n"
info: diagnostic
---
nash::names::ambiguous_type

  × Ambiguous type `Decode.Decoder`.
   ╭─[src/Main.nash:7:27]
 6 │ 
 7 │ type alias Wrapped 'msg = Decode.Decoder 'msg
   ·                           ──────────────
   ╰────
  help:     Html.Decode.Decoder
            Json.Decode.Decoder

        Give these imports distinct aliases.
